--- a/loginpage/login.css
+++ b/loginpage/login.css
@@ -38,7 +38,9 @@ body
     align-content: center;
     text-align: center;
     height: 100%;
-    width: 275px;
+    max-width: 275px;
+    display: inline-block;
+    margin-top: 25px;
 }
 
 .logo-img
@@ -52,8 +54,47 @@ body
 {
     font-family: acumin-pro-bold, sans-serif;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 12px;
     color: white;
     line-height: 16px;
     text-align: left;
+    position: relative;
+    left: 0;
+}
+
+.input
+{
+    border-width: 3px;
+    font-family: acumin-pro-bold, sans-serif;
+    color: #003466;
+    font-weight: bold;
+    background-color: #ffffff;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    box-shadow: none;
+    border: none;
+}
+
+.password
+{
+    font-weight: 900;
+}
+
+.btn
+{
+    margin-top: 20px;
+    color: #003466;
+    background: #ffd200;
+    border-radius: 0.8rem;
+    border: solid 0.2rem #ffd200;
+    font-weight: 700;
+    width: 125px;
+    height: 35px;
+}
+
+.btn:hover
+{
+    background: aliceblue;
 }
