--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -10,4 +10,20 @@ body
     padding: 0;
     border: 1px solid transparent;
     background-image: linear-gradient(to bottom, #0057ab 0%, #0057ab 40%, #00274d 60%, #00274d 100%);)
+    height: 95%;
+}
+
+#main-area
+{
+    align-content: center;
+    text-align: center;
+    padding-top: 85px;
+}
+
+#dialog
+{
+    background: #ffffff;
+    width: 285px;
+    align-content: center;
+    display: none;
 }
