--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -1,7 +1,9 @@
 html
 {
     height: 100%;
+    min-height: 100%;
     margin: 0;
+    overflow: auto;
 }
 
 body
@@ -11,19 +13,100 @@ body
     border: 1px solid transparent;
     background-image: linear-gradient(to bottom, #0057ab 0%, #0057ab 40%, #00274d 60%, #00274d 100%);)
     height: 95%;
+    min-height: 95%;
+    display: block;
+    overflow: auto;
 }
 
 #main-area
 {
     align-content: center;
     text-align: center;
-    padding-top: 85px;
+    min-height: 100%;
+    height: 100%;
+    padding-top: 5%;
 }
 
-#dialog
+#buttons
 {
-    background: #ffffff;
-    width: 285px;
-    align-content: center;
-    display: none;
+    width: 85%;
+    margin: 0 auto;
+    overflow: auto;
+    padding-top: 5px;
+}
+
+div.inline
+{
+    float: left;
+    width: 50%;   
+}
+
+#left-buttons
+{
+    text-align: left;
+    width: 100%
+    padding: 0;
+    margin: 0;
+}
+
+#right-buttons
+{
+    text-align: right;
+    width: 100%
+    padding: 0;
+    margin: 0;
+}
+
+span
+{
+    margin: 0 auto;
+    border-color: #ffd200;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    background: #ffd200;
+    border-width: 2px;
+    border-top: 2px;
+    border-style: solid;
+    font-family: acumin-pro-bold, sans-serif;
+    color: #003466;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+span:hover
+{
+    background: aliceblue;
+}
+
+#table-area
+{
+    background: #0033cc;
+    min-height: 85%;
+    width: 85%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+table
+{
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th 
+{
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) 
+{
+    background-color: #668cff;
+}
+
+tr:nth-child(1)
+{
+    background-color: #ffffff;
 }
