--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -12,10 +12,11 @@ body
     padding: 0;
     border: 1px solid transparent;
     background-image: linear-gradient(to bottom, #0057ab 0%, #0057ab 40%, #00274d 60%, #00274d 100%);)
-    height: 95%;
-    min-height: 95%;
+    height: 100%;
+    min-height: 100%;
     display: block;
     overflow: auto;
+    background-repeat: no-repeat;
 }
 
 #main-area
@@ -152,12 +153,12 @@ td, th
     padding: 8px;
 }
 
-tr:nth-child(even) 
+tbody:nth-child(even) 
 {
     background-color: #668cff;
 }
 
-tr:nth-child(1)
+tr.first
 {
     background-color: #d6d6c2;
 }
