--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -4,6 +4,13 @@ html
     min-height: 100%;
     margin: 0;
     overflow: auto;
+    -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-image: linear-gradient(to bottom, #0057ab 0%, #0057ab 40%, #00274d 60%, #00274d 100%);
+  background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 body
@@ -11,12 +18,12 @@ body
     margin: 0;
     padding: 0;
     border: 1px solid transparent;
-    background-image: linear-gradient(to bottom, #0057ab 0%, #0057ab 40%, #00274d 60%, #00274d 100%);)
-    height: 100%;
-    min-height: 100%;
     display: block;
     overflow: auto;
     background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
 }
 
 #main-area
@@ -45,16 +52,17 @@ body
 
 .pop-up-content
 {
-    background-color: #fefefe;
+    background-color: #889197;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    border-radius: 5px;
 }
 
 .close
 {
-    color: #aaaaaa;
+    color: #ffffff;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -67,11 +75,45 @@ body
     cursor: pointer;
 }
 
+form
+{
+    margin-top: 10px;
+}
+
+p.pop-up-text
+{
+    font-family: acumin-pro-bold, sans-serif;
+    display: inline;
+    font-size: 16px;
+    color: #003466;
+    font-weight: bold;
+}
+
+#add-button
+{
+    border-radius: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-right: 5px;
+    padding-left: 5px;
+    background: #ffd200;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #ffd200;
+    color: #003466;
+    font-weight: bold;
+}
+
+#add-button:hover
+{
+    background-color: aliceblue;
+}
+
 #buttons
 {
     width: 85%;
     margin: 0 auto;
-    overflow: auto;
+    overflow: hidden;
     padding-top: 5px;
 }
 
@@ -151,6 +193,15 @@ td, th
     border: 1px solid #d6d6c2;
     text-align: left;
     padding: 8px;
+}
+
+td.casID:hover
+{
+    background-color: #889197;
+}
+td.casID:focus
+{
+    background-color: aliceblue;
 }
 
 tbody:nth-child(even) 
