--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -172,7 +172,7 @@ span.btn:hover
 
 #table-area
 {
-    background: #0033cc;
+    background: #1741c2;
     min-height: 85%;
     width: 85%;
     margin: 0 auto;
